adjust wording on button to be more true to what it is doing

--- a/_locales/_untranslated_en.json
+++ b/_locales/_untranslated_en.json
@@ -64,5 +64,8 @@
   },
   "forwared_by": {
     "message": "Forwarded by %1$s"
+  },
+  "show_full_message_in_browser": {
+    "message": "Show full message in browser…"
   }
 }
